--- a/client/app/app.css
+++ b/client/app/app.css
@@ -7,9 +7,9 @@
 
 html,
 body {
-  @apply bg-white dark:bg-gray-950;
+  @apply bg-blue-300;
 
-  @media (prefers-color-scheme: dark) {
-    color-scheme: dark;
+  @media (prefers-color-scheme: normal) {
+    color-scheme: normal;
   }
 }
